# Lynxie

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml  rc-service
.github/: README.md
.woodpecker/: pipeline.yaml
Bot/: Dockerfile  pyproject.toml  requirements.txt
Bot/lynxie/: config.py  database.py  main.py  utils.py
Bot/lynxie/assets/: e621_blacklist.txt
Bot/lynxie/commands/: __init__.py  animals.py  e621.py  hello.py  help.py  image.py  music.py  ping.py
_resources/: resources.go
app/: app.go  errors.go
cmd/lynxie-bot/: main.go
commands/: meta.go  porb.go  tinyfox.go
commands/debug/: debug.go
commands/img/: img.go
commands/porb/: porb.go  types.go
commands/tinyfox/: tinyfox.go
internal/bot/: bot.go
internal/color/: color.go
internal/commands/debug/: debug.go
internal/commands/fortnite/: fortnite.go
internal/commands/img/: img.go
internal/commands/porb/: porb.go
internal/commands/tinyfox/: tinyfox.go
internal/err/: err.go
internal/errors/: errors.go
internal/handler/: handler.go
lynxie/: __main__.py  config.py  database.py  utils.py
lynxie/assets/: e621_blacklist.txt
lynxie/commands/: __init__.py  animals.py  e621.py  hello.py  help.py  image.py  music.py  ping.py
pkg/commands/debug/: debug.go
pkg/commands/img/: img.go
pkg/commands/porb/: porb.go
pkg/commands/tinyfox/: tinyfox.go
src/: main.rs
src/commands/: attachmentinput.rs  id.rs  mod.rs  numberinput.rs  ping.rs  wonderful_command.rs
utils/: color.go
