[package]
name = "lynxie"
version = "0.1.0"
authors = ["Fluffy Bean <@Fluffy Bean>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Discord API wrapper, yoinked from robbb bot as I have no clue what I'm doing
serenity = { version = "0.11.5", default-features = false, features = ["collector", "builder", "cache", "chrono", "client", "gateway", "model", "http", "utils", "rustls_backend"]}

# Required for async applications
tokio = { version = "1.21", features = ["macros", "fs", "rt-multi-thread"]}

# Dot env for variables
dotenv = "0.15.0"