[tool.poetry]
name = "lynxie"
version = "0.1.0"
description = ""
authors = ["Fluffy <michal-gdula@protonmail.com>"]
readme = ".github/README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
discord-py = {extras = ["voice"], version = "^2.3.2"}
black = "^24.3.0"
sqlalchemy = "^2.0.20"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
yt-dlp = "^2024.04.09"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
