[tool.poetry]
name = "lynxie"
version = "0.1.0"
description = ""
authors = ["Fluffy <michal-gdula@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
discord-py = {extras = ["voice"], version = "^2.3.2"}
black = "^23.7.0"
sqlalchemy = "^2.0.20"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
yt-dlp = "^2023.9.24"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
